--- a/css/styles.css
+++ b/css/styles.css
@@ -111,14 +111,10 @@ img {
 
 /*#region Header*/
 
-.page-header {
-  border-bottom: 1px solid #e7e9fc;
-}
-
 .header-container {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  border-bottom: 1px solid #e7e9fc;
 }
 
 .header-nav,
@@ -134,20 +130,24 @@ img {
 
 .header-logo {
   padding: 24px 0;
+  margin-right: 76px;
 }
 
 .header-logo .logo-part {
   color: #2e2f42;
+  margin-right: 76px;
 }
 
 .nav-link {
-  display: block;
-  padding: 24px 0;
-
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #2e2f42;
+}
+
+.nav-item,
+.contacts-item {
+  margin-right: 40px;
 }
 
 .contacts {
@@ -160,9 +160,6 @@ img {
 }
 
 .contacts-link {
-  display: block;
-  padding: 24px 0;
-
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
@@ -197,9 +194,8 @@ img {
 .hero-btn {
   display: block;
   margin: 0 auto;
-  padding: 0 32px;
+  padding: 16px 32px;
   min-width: 169px;
-  height: 56px;
   border: none;
   border-radius: 4px;
 
