--- a/css/styles.css
+++ b/css/styles.css
@@ -111,10 +111,14 @@ img {
 
 /*#region Header*/
 
+.page-header {
+  border-bottom: 1px solid #e7e9fc;
+}
+
 .header-container {
   display: flex;
   align-items: center;
-  border-bottom: 1px solid #e7e9fc;
+  justify-content: center;
 }
 
 .header-nav,
@@ -137,16 +141,12 @@ img {
 }
 
 .nav-link {
+  display: block;
   padding: 24px 0;
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #2e2f42;
-}
-
-.nav-item,
-.contacts-item {
-  margin-right: 40px;
 }
 
 .contacts {
@@ -159,6 +159,7 @@ img {
 }
 
 .contacts-link {
+  display: block;
   padding: 24px 0;
   line-height: 1.5;
   letter-spacing: 0.02em;
