--- a/css/styles.css
+++ b/css/styles.css
@@ -176,14 +176,13 @@ img {
 
 /*#region Hero*/
 
-.section-hero {
+.section-hero .container {
   padding: 188px 0;
   background-color: #2e2f42;
 }
 
 .hero-title {
-  max-width: 496px;
-  margin: 0 auto 48px;
+  max-width: 494px;
 
   font-size: 56px;
   line-height: 1.07;
@@ -194,7 +193,6 @@ img {
 
 .hero-btn {
   display: block;
-  margin: 0 auto;
   padding: 16px 32px;
   min-width: 169px;
   border: none;
