--- a/css/styles.css
+++ b/css/styles.css
@@ -118,7 +118,6 @@ img {
 .header-container {
   display: flex;
   align-items: center;
-  justify-content: center;
 }
 
 .header-nav,
@@ -176,13 +175,13 @@ img {
 
 /*#region Hero*/
 
-.section-hero .container {
+.section-hero {
   padding: 188px 0;
   background-color: #2e2f42;
 }
 
 .hero-title {
-  max-width: 494px;
+  max-width: 496px;
 
   font-size: 56px;
   line-height: 1.07;
@@ -193,6 +192,7 @@ img {
 
 .hero-btn {
   display: block;
+  margin: 0 auto;
   padding: 16px 32px;
   min-width: 169px;
   border: none;
