--- a/css/styles.css
+++ b/css/styles.css
@@ -182,7 +182,7 @@ img {
 
 .hero-title {
   max-width: 496px;
-
+  margin: 0 auto 48px;
   font-size: 56px;
   line-height: 1.07;
   letter-spacing: 0.02em;
