--- a/css/styles.css
+++ b/css/styles.css
@@ -223,8 +223,7 @@ img {
 }
 
 .benefits-item {
-  margin-right: 24px;
-  width: 264px;
+  width: calc((100% - 72px) / 4);
 }
 /*#endregion Benefits*/
 
@@ -237,6 +236,7 @@ img {
 .team-list {
   display: flex;
   gap: 24px;
+  margin-top: 76px;
 }
 
 .team-item {
@@ -245,13 +245,18 @@ img {
   background-color: #fff;
 }
 
-.team-content {
-  padding: 32px 16px;
-}
-
 .team-subtitle,
 .team-text {
+  padding: 0 16px;
   text-align: center;
+}
+
+.team-subtitle {
+  margin-top: 32px;
+}
+
+.team-text {
+  margin-bottom: 32px;
 }
 
 /*#endregion Team*/
