--- a/css/styles.css
+++ b/css/styles.css
@@ -225,6 +225,7 @@ img {
 .benefits-item {
   width: calc((100% - 72px) / 4);
 }
+
 /*#endregion Benefits*/
 
 /*#region Team*/
@@ -244,6 +245,10 @@ img {
   background-color: #fff;
 }
 
+.team-content {
+  padding: 32px 16px;
+}
+
 .team-subtitle,
 .team-text {
   text-align: center;
@@ -255,15 +260,17 @@ img {
 
 .portfolio-list {
   display: flex;
+  flex-wrap: wrap;
   gap: 48px 24px;
 }
 
 .portfolio-item {
   width: calc((100% - 48px) / 3);
-  border: 1px solid #e7e9fc;
 }
 
 .portfolio-content {
+  border: 1px solid #e7e9fc;
+  padding: 32px 16px;
 }
 
 /*#endregion Portfolio*/
