--- a/css/styles.css
+++ b/css/styles.css
@@ -270,7 +270,7 @@ img {
 
 .portfolio-content {
   border: 1px solid #e7e9fc;
-  margin-top: none;
+  border-top: none;
   padding: 32px 16px;
 }
 
